--- a/tex/2023/3/5.tex
+++ b/tex/2023/3/5.tex
@@ -1,2 +1,108 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item If \(x, y\) are both non-zero,
+          \begin{align*}
+              \frac{1}{x} + \frac{2}{y} & = \frac{2}{7} \\
+              7y + 2 \cdot 7x           & = 2 xy        \\
+              2xy - 14x - 7y            & = 0           \\
+              2xy - 14x - 7y + 49       & = 49          \\
+              2x (y - 7) - 7 (y - 7)    & = 49          \\
+              (2x - 7) (y - 7)          & = 49.
+          \end{align*}
+
+          We must have \(2x - 7 \geq 2 \cdot 1 - 7 = -5\) and \(y - 7 \geq 1 - 7 = -6\).
+
+          \(2x - 7\) and \(y - 7\) are both integers, and we do casework considering expressing \(49\) into a product of two integers that are both not less than \(-6\).
+          \begin{itemize}
+              \item \(49 = 1 \times 49\), \(2x - 7 = 1\) and \(y - 7 = 49\), giving us \((x, y) = (4, 56)\).
+              \item \(49 = 7 \times 7\), \(2x - 7 = 7\) and \(y = 7 = 7\), giving us \((x, y) = (7, 14)\).
+              \item \(49 = 49 \times 1\), \(2x - 7 = 49\) and \(x - 7 = 1\), giving us \((x, y) = (28, 8)\).
+          \end{itemize}
+
+          Since all \(x, y\) are non-zero, we can conclude that the solutions are \((x, y) = (4, 56), (7, 14), (28, 8)\).
+
+    \item We have
+          \begin{align*}
+              p^2 + pq + q^2          & = n^2      \\
+              p^2 + 2pq + q^2         & = n^2 + pq \\
+              (p + q)^2               & = n^2 + pq \\
+              (p + q)^2 - n^2         & = pq       \\
+              (p + q + n) (p + q - n) & = pq.
+          \end{align*}
+
+          We must have \(p + q + n > p + q - n\) since \(n\) is a positive integer. We have \(p + q + n > p, q > 1 > 0\). It must be the case that \(p + q - n\) is positive as well.
+
+          Therefore, \(p + q + n\) cannot be \(1, p, q\), and it must be the case that \(p + q + n = pq\) and \(p + q - n = 1\).
+
+          Therefore, \(p + q = n + 1\), and \(pq = p + q + n = 2n + 1\).
+
+          Hence, \(p, q\) are solutions to the quadratic equation in \(t\)
+          \[
+              t^2 - (n + 1)t + (2n + 1) = 0.
+          \]
+
+          Solving this gives us
+          \begin{align*}
+              p, q & = \frac{(n + 1) \pm \sqrt{(n + 1)^2 - 4 \cdot (2n + 1)}}{2} \\
+                   & = \frac{(n + 1) \pm \sqrt{n^2 - 6n - 3}}{2}.
+          \end{align*}
+
+          We have \(n^2 - 6n - 3 = (n - 3)^2 - 12\) must be a perfect square for \(p, q\) to be rational (and they are since all integers are rational).
+
+          Consider \(a, b \geq 0\), \(a, b \in \NN\) such that \(a^2 - b^2 = (a + b) (a - b) = 12\).
+
+          \(a + b\) and \(a - b\) must take the same odd-even parity, and the only possibility is therefore \(a + b = 6\) and \(a - b = 2\), solving to \((a, b) = (4, 2)\).
+
+          Therefore, \(n - 3 = 4\), \(n = 7\), and we solve for
+          \[
+              p, q = \frac{8 \pm \sqrt{49 - 42 - 3}}{2} = 4 \pm 1
+          \]
+          and \((p, q) = (3, 5), (5, 3)\) are indeed primes, and \(n = 7\).
+
+    \item If \(p + q - n \geq p\), then \(q \geq n\), and for the original equation,
+          \[
+              \LHS = p^3 + q^3 + 3pq^2 > q^3 \geq n^3 = \RHS,
+          \]
+          and hence \(\LHS > \RHS\) is impossible. Hence, \(p + q - n < p\).
+
+          It must also be the case for \(p + q - n < q\).
+
+          We have
+          \begin{align*}
+              p^3 + q^3 + 3pq^2                                          & = n^3          \\
+              p^3 + q^3 + 3pq^2 + 3p^2 q                                 & = n^3 + 3p^2 q \\
+              (p + q)^3                                                  & = n^3 + 3p^2 q \\
+              (p + q)^3 - n^3                                            & = 3p^2 q       \\
+              (p + q - n) \left[(p + q)^2 + (p + q) \cdot n + n^2\right] & = 3p^2 q.
+          \end{align*}
+
+          The factors of \(3p^2 q\) are (given \(p\) and \(q\) are prime),
+          \[
+              1, 3, p, q, 3p, 3q, p^2, pq, 3p^2, 3pq, p^2 q, 3 p^2 q,
+          \]
+          and since \(p + q - n < p\) and \(p + q - n < q\), it must be either the case that \(p + q - n = 1\) or \(p + q - n = 3\).
+
+          \begin{itemize}
+              \item If \(p + q - n = 1\), then \(p + q = n + 1\), we have
+                    \begin{align*}
+                        (p + q)^2 + (p + q) n + n^2 & = 3 p^2 q  \\
+                        (n + 1)^2 + (n + 1) n + n^2 & = 3 p^2 q  \\
+                        3n^2 + 3n + 2               & = 3 p^2 q.
+                    \end{align*}
+
+                    The left-hand side is congruent to \(1\) modulo \(3\), while the right-hand side is a multiple of \(3\), so this is impossible.
+
+              \item If \(p + q - n = 3\), \(p + q = n + 3\), we have
+                    \begin{align*}
+                        (p + q)^2 + (p + q) n + n^2 & = p^2 q  \\
+                        (n + 3)^2 + (n + 3)n + n^2  & = p^2 q  \\
+                        3n^2 + 9n + 9               & = p^2 q  \\
+                        3 (n^2 + 3n + 3)            & = p^2 q.
+                    \end{align*}
+
+                    Therefore, \(3 \divides p^2 q\), and hence \(3 \divides p\) or \(3 \divides q\), and hence either \(p\) or \(q\) must be \(3\) and the other one is \(n\). However, we have concluded that \(p + q - n < p \iff q < n\) and \(p + q - n < q \iff p < n\), which makes this impossible.
+          \end{itemize}
+
+          This shows that it is impossible for primes \(p, q\) and integer \(n\) such that \(p^3 + q^3 + 3pq^2 = n^3\), which shows that there are no primes \(p, q\) such that \(p^3 + q^3 + 3pq^2\) is the cube of an integer.
+\end{enumerate}
