--- a/tex/premeable.tex
+++ b/tex/premeable.tex
@@ -62,7 +62,7 @@
     \rfoot{Page \thepage\space of \pageref*{LastPage}}
 }
 
-\fancypagestyle{footerOnly}{
+\fancypagestyle{plain}{
     \fancyhf{}
     \renewcommand{\headrulewidth}{0pt}
     \SetFooter
